# kea_car_microservices

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
auth_microservice/: .dockerignore  .env.example  Dockerfile  README.md  main.py  main_consumer.py  pyproject.toml
auth_microservice/rabbitmq/: consumer.py  rabbitmq_consume.py
auth_microservice/scripts/: Dockerfile  mongodb_insert_data.json  seed_mongodb.py
auth_microservice/src/core/: __init__.py  config.py  security.py  tokens.py
auth_microservice/src/database_management/: mongodb_connection.py
auth_microservice/src/entities/: __init__.py  base_entity.py  employee.py
auth_microservice/src/exceptions/: __init__.py  database_errors.py  error_handler.py
auth_microservice/src/logger_tool/: logger.py
auth_microservice/src/message_broker_management/: __init__.py  base_consumer.py  consumers.py  main_consumer.py  rabbitmq_management.py
auth_microservice/src/repositories/: base_repository.py  employee_repository.py
auth_microservice/src/resources/: __init__.py  employee_resource.py
auth_microservice/src/routers/: __init__.py  login_controller.py
auth_microservice/src/services/: employees_service.py  login_service.py
auth_microservice/src/util/: handle_employee_message.py  handle_messages.py
code_documentation/: README.md  pyproject.toml
code_documentation/docs/: conf.py  index.rst
code_documentation/docs/source/: src.database_management.rst  src.entities.rst  src.repositories.rst
customer_microservice/: .env.example  Dockerfile  README.md  main.py  mongodb_connection.py  pyproject.toml
customer_microservice/scripts/: Dockerfile  mongodb_insert_data.json  seed_mongodb.py
customer_microservice/src/database_management/: __init__.py  mongodb_connection.py
customer_microservice/src/entities/: __init__.py  accessory.py  base_entity.py  brand.py  color.py  insurance.py  model.py
customer_microservice/src/exceptions/: __init__.py  database_exceptions.py  error_handler.py
customer_microservice/src/repositories/: __init__.py  accessory_repository.py  base_repository.py  brand_repository.py  color_repository.py  insurance_repository.py  model_repository.py
customer_microservice/src/resources/: __init__.py  accessory_resource.py  brand_resource.py  color_resource.py  insurance_resource.py  model_resource.py
customer_microservice/src/routers/: __init__.py  accessories_controller.py  brands_controller.py  colors_controller.py  insurances_controller.py  models_controller.py
customer_microservice/src/services/: accessories_service.py  brands_service.py  colors_service.py  insurances_service.py  models_service.py
employee_microservice/: .env.example  Dockerfile  README.md  main.py  main_consumer.py  pyproject.toml
employee_microservice/rabbitmq/: consumer.py  consumer_trial.py  publisher.py
employee_microservice/src/core/: __init__.py  config.py  security.py
employee_microservice/src/database_management/: mysqldb_connection.py
employee_microservice/src/entities/: __init__.py  accessory.py  base_entity.py  brand.py  car.py  color.py  customer.py  employee.py  insurance.py  model.py  purchase.py
employee_microservice/src/exceptions/: __init__.py  database_errors.py  error_handler.py  invalid_credentials_errors.py
employee_microservice/src/message_broker_management/: __init__.py  base_consumer.py  base_publisher.py  main_consumer.py  publishers.py  rabbitmq_management.py
employee_microservice/src/repositories/: __init__.py  accessory_respository.py  base_repository.py  brand_repository.py  car_repository.py  color_repository.py  customer_repository.py  employee_repository.py  insurance_repository.py  model_repository.py  purchase_repository.py
employee_microservice/src/resources/: __init__.py  brand_resource.py  car_resource.py  color_resource.py  customer_resource.py  employee_resource.py  insurance_resource.py  model_resource.py  purchase_resource.py
employee_microservice/src/routers/: __init__.py  accessories_controller.py  brands_controller.py  cars_controller.py  colors_controller.py  customers_controller.py  employees_controller.py  insurances_controller.py  login_controller.py  models_controller.py  purchases_controller.py
employee_microservice/src/services/: accessories_service.py  brands_service.py  cars_service.py  colors_service.py  customers_service.py  employees_service.py  insurances_service.py  models_service.py  purchases_service.py
employee_microservice/src/util/: __init__.py  handle_employee_message.py  handle_messages.py
synch_microservice/: .env.example  Dockerfile  README.md  main.py  main_consumer.py  pyproject.toml
synch_microservice/rabbitmq/: consumer.py
(+118 files in other folders)
