[tool.poetry]
name = "kea-car-microservices"
version = "0.1.0"
description = ""
authors = ["Marcus <marc303i@stud.kea.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
