[project]
name = "auth-microservice"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcus",email = "marc303i@stud.kea.dk"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pika (>=1.3.2,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pymongo (>=4.11.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
